# synthesis

./: .clang-format  .gitignore  CMakeLists.txt  Filesystem.cc  README.md  case.cpp
include/: Element.h  FastView.h  Folder.h  View.h
src/: FastView.cc  Folder.cc  View.cc
